Fix whitespace

--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -147,13 +147,13 @@ body { display: flex; flex-direction: column; }
         line-height: 5rem;
         font-size: 5rem;
     }
-	> .segment th {
-		border-right: 1px solid #eeeeee;
-		text-align: right;
-		font-weight: normal;
-		padding-right: 1ex;
-		margin-right: 1ex;
-	}
+    > .segment th {
+        border-right: 1px solid #eeeeee;
+        text-align: right;
+        font-weight: normal;
+        padding-right: 1ex;
+        margin-right: 1ex;
+    }
 }
 
 /** small actor partial **/
@@ -202,7 +202,7 @@ body { display: flex; flex-direction: column; }
 
 /* missing styling for forms */
 .ui.form { margin-bottom: 1rem; }
-#half { width: calc(48% - 1ex); margin-right: 1ex; }
+#half { width: calc(47% - 1ex); margin-right: 1ex; }
 .ui.form:last-child { margin-bottom: 0; }
 .ui.inline.form { display: inline-block; }
 
